5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1594_2425.log
== TEST (2019-04-05 09:36:18) 
-- CODE:
a = float(input('distancia percorrida: '))
b = float(input('combustivel gasto: '))
consumomedio = (a/b)

-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 09:37:03) 
-- CODE:
a = float(input('distancia percorrida: '))
b = float(input('combustivel gasto: '))
consumomedio = (a/b,'km/l')


-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 09:37:33) 
-- CODE:
a = float(input('distancia percorrida: '))
b = float(input('combustivel gasto: '))
consumomedio = (a/b,'km/l')
print(round(consumomedio))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(consumomedio))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 09:37:49) 
-- CODE:
a = float(input('distancia percorrida: '))
b = float(input('combustivel gasto: '))
consumomedio = (a/b)
print(round(consumomedio))


-- EXECUTION TIME:
0.157405
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 09:37:53) 
-- CODE:
a = float(input('distancia percorrida: '))
b = float(input('combustivel gasto: '))
consumomedio = (a/b)
print(round(consumomedio))


-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 09:38:12) 
-- CODE:
a = float(input('distancia percorrida: '))
b = float(input('combustivel gasto: '))
consumomedio = (a/b)
print(round(consumomedio, 2))


-- OUTPUT:
14.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 09:38:22) 
-- CODE:
a = float(input('distancia percorrida: '))
b = float(input('combustivel gasto: '))
consumomedio = (a/b)
print(round(consumomedio, 3))


-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 09:38:46) 
-- CODE:
a = float(input('distancia percorrida: '))
b = float(input('combustivel gasto: '))
consumomedio = (a/b)
print(round(consumomedio, 3,'km/l'))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(consumomedio, 3,'km/l'))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 09:39:14) 
-- CODE:
a = float(input('distancia percorrida: '))
b = float(input('combustivel gasto: '))
consumomedio = (a/b)
print(round(consumomedio, 3))'km/l'


-- ERROR:
File "XXXX", line 4
    print(round(consumomedio, 3))'km/l'
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 09:39:33) 
-- CODE:
a = float(input('distancia percorrida: '))
b = float(input('combustivel gasto: '))
consumomedio = (a/b)
print(round(consumomedio, 3 'km/l'))


-- ERROR:
File "XXXX", line 4
    print(round(consumomedio, 3 'km/l'))
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 09:39:40) 
-- CODE:
a = float(input('distancia percorrida: '))
b = float(input('combustivel gasto: '))
consumomedio = (a/b)
print(round(consumomedio, 3 ,'km/l'))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(consumomedio, 3 ,'km/l'))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 09:39:56) 
-- CODE:
a = float(input('distancia percorrida: '))
b = float(input('combustivel gasto: '))
consumomedio = (a/b)
print(round(consumomedio, 3))


-- EXECUTION TIME:
0.292091
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 09:39:58) 
-- CODE:
a = float(input('distancia percorrida: '))
b = float(input('combustivel gasto: '))
consumomedio = (a/b)
print(round(consumomedio, 3))


-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 09:40:27) 
-- CODE:
a = float(input('distancia percorrida: '))
b = float(input('combustivel gasto: '))
consumomedio = (a/b)
consumo = print(round(consumomedio, 3))


-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 09:40:57) 
-- CODE:
a = float(input('distancia percorrida: '))
b = float(input('combustivel gasto: '))
consumomedio = (a/b)
consumo = print(round(consumomedio, 3))
print(consumo+ 'km/l')


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(consumo+ 'km/l')
TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 09:41:28) 
-- CODE:
a = float(input('distancia percorrida: '))
b = float(input('combustivel gasto: '))
consumomedio = (a/b)
consumo = print(round(consumomedio, 3))
print(consumo + 'km/l')


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(consumo + 'km/l')
TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 09:41:46) 
-- CODE:
a = float(input('distancia percorrida: '))
b = float(input('combustivel gasto: '))
consumomedio = (a/b)
consumo = print(round(consumomedio, 3))
print(int(consumo + 'km/l'))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(int(consumo + 'km/l'))
TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 09:41:58) 
-- CODE:
a = float(input('distancia percorrida: '))
b = float(input('combustivel gasto: '))
consumomedio = (a/b)
consumo = print(round(consumomedio, 3))
print(float(consumo + 'km/l'))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(float(consumo + 'km/l'))
TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 09:42:09) 
-- CODE:
a = float(input('distancia percorrida: '))
b = float(input('combustivel gasto: '))
consumomedio = (a/b)
consumo = print(round(consumomedio, 3))



-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 09:44:50) 
-- CODE:
a = float(input('distancia percorrida: '))

b = float(input('combustivel gasto: '))

consumomedio = (a/b)

consumo = print(round(consumomedio, 3),('km/l')



-- ERROR:
File "XXXX", line 10
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 09:45:03) 
-- CODE:
a = float(input('distancia percorrida: '))

b = float(input('combustivel gasto: '))

consumomedio = (a/b)

consumo = print(round(consumomedio, 3),('km/l'))



-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 09:45:14) 
-- CODE:
a = float(input('distancia percorrida: '))

b = float(input('combustivel gasto: '))

consumomedio = (a/b)

consumo = print(round(consumomedio, 3),('km/l'))



-- EXECUTION TIME:
0.141266
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
